--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pasquale",
   "version": "0.0.0",
-  "description": "",
+  "description": "Checks for spelling errors in a given sentence",
   "main": "index.js",
   "directories": {
     "test": "test",
