--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/cirocosta/pasquale",
   "dependencies": {
+    "bower": "^1.3.5",
     "q": "^1.0.1",
     "spellcheck": "0.0.4",
     "yargs": "^1.2.3"
