adds logic for dealing with removal of ignored words @ bin

--- a/.pasqualerc
+++ b/.pasqualerc
@@ -1,7 +1,12 @@
 {
     "location": "/home/ciro/Development/Javascript/pasquale/.pasqualerc",
     "ignored": [
-        "palavra"
+        "palavra",
+        true,
+        true,
+        "aaa",
+        "bbb",
+        "true"
     ],
     "default": "pt-br"
 }
