adds dictmanagers resolver and starts the downloader

--- a/src/lang-mapping.json
+++ b/src/lang-mapping.json
@@ -93,7 +93,8 @@
   },
   "pt-br": {
     "aff": "Portuguese (Brazilian).aff",
-    "dic": "Portuguese (Brazilian).dic"
+    "dic": "Portuguese (Brazilian).dic",
+    "url": "https://nodeload.github.com/pasquale-inc/dict-portuguese-brazillian/zip/master"
   },
   "ro": {
     "aff": "Romanian (Modern).aff",
