--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/cirocosta/pasquale",
   "dependencies": {
     "bower": "^1.3.5",
+    "download": "^0.1.18",
+    "progress": "^1.1.7",
     "q": "^1.0.1",
     "spellcheck": "0.0.4",
     "yargs": "^1.2.3"
