adds the download method to dictmanager

--- a/src/lang-mapping.json
+++ b/src/lang-mapping.json
@@ -92,6 +92,7 @@
     "dic": "Portuguese (European).dic"
   },
   "pt-br": {
+    "name": "Portuguese (Brazilian)",
     "aff": "Portuguese (Brazilian).aff",
     "dic": "Portuguese (Brazilian).dic",
     "url": "https://nodeload.github.com/pasquale-inc/dict-portuguese-brazillian/zip/master"
