--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "bower": "^1.3.5",
     "download": "^0.1.18",
-    "progress": "^1.1.7",
+    "humanb": "0.0.3",
     "q": "^1.0.1",
     "spellcheck": "0.0.4",
     "yargs": "^1.2.3"
