--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Checks for spelling errors in a given sentence",
   "main": "src/main.js",
   "directories": {
-    "test": "test",
+    "test": "test"
   },
   "scripts": {
     "test": "mocha test"
